--- a/main.tex
+++ b/main.tex
@@ -51,6 +51,7 @@
 \newcommand{\question}[1]{ {\color{red} #1 }}
 \newtheorem{theorem}{Theorem}[section]
 \newtheorem{lemma}[theorem]{Lemma}
+\newtheorem{proposition}[theorem]{Preposition}
 \usepackage[caption=false,font=footnotesize]{subfig}
 \usepackage{url}
 % \usepackage{hyperref}
